优化UI介面按钮

--- a/feature/target-detection.html
+++ b/feature/target-detection.html
@@ -125,12 +125,12 @@
     </div>
 
     <div id="xterm_yolo" style="margin-top: 0px; margin-bottom: 60px;"></div>
-    <div style='position: fixed;top: 112px;right: 23px;width: 10px;'>
-      <button style="padding-right: 24px;" class="sidebar btn btn-primary" type="button" data-bs-toggle="offcanvas"
+    <div style="display: flex; flex-direction: column; align-items:flex-end; position: fixed;top: 40%;right: 0px;width: 10px; padding:10px">
+      <button class="sidebar btn btn-primary" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasRightLabel" aria-controls="offcanvasExample" id='train_history_dir_yolo'>
         训练记录查看
       </button>
-      <button style="padding-right: 24px;" class="sidebar btn btn-primary" type="button" id='make_sense_tool_button'>
+      <button class="sidebar btn btn-primary" type="button" id='make_sense_tool_button'>
       图片标注
       </button>
     </div>
