--- a/feature/image-classification.html
+++ b/feature/image-classification.html
@@ -124,10 +124,12 @@
       </div>
     </div>
     <div id="xterm_cls" style="margin-top: 0px;margin-bottom: 60px;"></div>
-    <div style='position: fixed;top: 112px;right: 23px;width: 10px;'>
-      <button style="padding-right: 24px;" class="sidebar btn btn-primary" type="button" data-bs-toggle="offcanvas"
+    <div style="display: flex; flex-direction: column; align-items:flex-end; position: fixed;top: 40%;right: 0px;width: 10px; padding:10px">
+      <button class="sidebar btn btn-primary" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasRightLabel" aria-controls="offcanvasExample"
-        id="train_history_dir_cls">训练记录查看</button>
+        id="train_history_dir_cls">
+        训练记录查看
+      </button>
     </div>
   </div>
 
