优化软件图标，并且为窗口标题增加本地化文本

--- a/feature/data-collection.html
+++ b/feature/data-collection.html
@@ -58,7 +58,7 @@
   }  
 </style>  
 
-		<div class="container" style="display: flex; justify-content: center; align-items: center; padding: 20px;">  
+		<div class="container" style="display: flex; justify-content: center; align-items: center; padding: 20px; margin-top: 10px;">  
 	  <div style="background: linear-gradient(135deg, #f0f4f8, #d9e2ec); border-radius: 20px; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); display: flex; gap: 20px; width: fit-content;">  
 		<div class="form-floating" style="width: 300px;">  
 		  <input class="form-control" id="classname" style="border: none; box-shadow: none; border-radius: 10px;">  
