--- a/feature/image-classification.html
+++ b/feature/image-classification.html
@@ -1,9 +1,10 @@
 <!--list.html-->
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
   <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/font-awesome.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/font-awesome.css">
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../node_modules/optiscroll/dist/optiscroll.css">
@@ -124,10 +125,10 @@
       </div>
     </div>
     <div id="xterm_cls" style="margin-top: 0px;margin-bottom: 60px;"></div>
-    <div style="display: flex; flex-direction: column; align-items:flex-end; position: fixed;top: 40%;right: 0px;width: 10px; padding:10px">
+    <div
+      style="display: flex; flex-direction: column; align-items:flex-end; position: fixed;top: 40%;right: 0px;width: 10px; padding:10px">
       <button class="sidebar btn btn-primary" type="button" data-bs-toggle="offcanvas"
-        data-bs-target="#offcanvasRightLabel" aria-controls="offcanvasExample"
-        id="train_history_dir_cls">
+        data-bs-target="#offcanvasRightLabel" aria-controls="offcanvasExample" id="train_history_dir_cls">
         训练记录查看
       </button>
     </div>
