--- a/feature/target-detection.html
+++ b/feature/target-detection.html
@@ -4,6 +4,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/font-awesome.css">
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../node_modules/optiscroll/dist/optiscroll.css">
@@ -125,13 +126,14 @@
     </div>
 
     <div id="xterm_yolo" style="margin-top: 0px; margin-bottom: 60px;"></div>
-    <div style="display: flex; flex-direction: column; align-items:flex-end; position: fixed;top: 40%;right: 0px;width: 10px; padding:10px">
+    <div
+      style="display: flex; flex-direction: column; align-items:flex-end; position: fixed;top: 40%;right: 0px;width: 10px; padding:10px">
       <button class="sidebar btn btn-primary" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasRightLabel" aria-controls="offcanvasExample" id='train_history_dir_yolo'>
         训练记录查看
       </button>
       <button class="sidebar btn btn-primary" type="button" id='make_sense_tool_button'>
-      图片标注
+        图片标注
       </button>
     </div>
   </div>
