完成工具集页面的跳转功能，现在工具集的按键都能正确跳转或打开工具

--- a/feature/tool-set.html
+++ b/feature/tool-set.html
@@ -29,9 +29,8 @@
                     <img src="../icons/miniLEDdisplayVESIBIT.ico" alt="Tool 1 Image" class="w-full h-48 object-contain object-cover">
                     <div class="p-6 flex-grow">
                         <h2 id="toolname_mini_led_editor" class="text-xl font-semibold mb-2" >LED灯牌编辑器(LED Sign Editor)</h2>
-                        <p class="text-gray-600 mb-4" id="tooldescript_mini_led_editor">修改LED灯牌内容和显示效果</p>
-                        <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">打开</button>
-						<button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">了解更多</button>
+                        <p class="text-gray-600 mb-4" id="tooldescript_mini_led_editor">修改LED灯牌内容和显示效果,支持显示图标和自定义图案</p>
+                        <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" id="btn_open_mini_led_editor">打开软件</button>
                     </div>
                 </div>
 
@@ -39,10 +38,9 @@
                 <div class="bg-white shadow-md rounded-lg overflow-hidden flex flex-col">
                     <img src="../icons/WizResizer.png" alt="Tool 2 Image" class="w-full object-contain object-cover">
                     <div class="p-6 flex-grow">
-                        <h2 class="text-xl font-semibold mb-2" id="toolname_wiz_resizer">威智图改（Wiz Resizer）</h2>
+                        <h2 class="text-xl font-semibold mb-2" id="toolname_wiz_resizer">威智图改(Wiz Resizer)</h2>
                         <p class="text-gray-600 mb-4" id="tooldescript_wiz_resizer">支持批量修改图片尺寸并自动填充到满足比例要求</p>
-                        <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">打开</button>
-						<button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">了解更多</button>
+                        <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" id="btn_open_wiz_resizer">打开软件</button>
                     </div>
                 </div>
 				
@@ -50,11 +48,14 @@
                 <div class="bg-white shadow-md rounded-lg overflow-hidden flex flex-col">
                     <img src="../icons/make-sense-logo.png" alt="Tool 2 Image" class="w-full  object-contain object-cover">
                     <div class="p-6 flex-grow">
-                        <h2 class="text-xl font-semibold mb-2" id="toolname_wiz_resizer">慧标（Make-Sense）</h2>
-                        <p class="text-gray-600 mb-4" id="tooldescript_wiz_resizer">一款图像标注工具,支持目标检测数据集的标注，标注区域支持矩形、点、线、多边形，并且支持多种导出格式</p>
-                        <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">打开</button>
-						<button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">了解更多</button>
+                        <h2 class="text-xl font-semibold mb-2" id="toolname_make_sense">慧标(Make-Sense)</h2>
+                        <p class="text-gray-600 mb-4" id="tooldescript_make_sense">一款图像标注工具,支持目标检测数据集的标注，标注区域支持矩形、点、线、多边形，并且支持多种导出格式</p>
+                        <button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" id="btn_open_make_sense" >打开</button>
+						<button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" id="btn_open_learn_make_sense">了解更多</button>
                     </div>
                 </div>
+				<script src="../utils/language-html.js"></script>
+                <script type="text/javascript" src="tool-set_renderer.js"></script>
+				
     	</body>
     </html>
