重构项目结构并更新语言处理

--- a/feature/tool-set.html
+++ b/feature/tool-set.html
@@ -46,7 +46,7 @@
 						<button class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700" id="btn_open_learn_make_sense">了解更多</button>
                     </div>
                 </div>
-				<script src="../utils/language-html.js"></script>
+				<script src="../utils_protected/language-html_loader.js"></script>
                 <script type="text/javascript" src="tool-set_renderer.js"></script>
 				
     	</body>
