--- a/feature/data-collection.html
+++ b/feature/data-collection.html
@@ -146,7 +146,7 @@
       </div>
     </div>
   </div>
-  <script src="../utils/language-html.js"></script>
+  <script src="../utils_protected/language-html_loader.js"></script>
   <script type="text/javascript" src="../static/js/jquery-1.11.0.min.js"></script>
   <script>try { $ = jQuery = module.exports; } catch (e) { }</script>
   <script type="text/javascript" src="../static/js/jquery-tab.js"></script>
@@ -155,8 +155,9 @@
   <script type="text/javascript" src="../node_modules\@popperjs\core\dist\umd\popper.js"></script>
   <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="../node_modules\optiscroll\dist\jquery.optiscroll.js"></script>
-  <script type="text/javascript" src="../static/js/blockly_main.js"></script>
+  
   <script type="text/javascript" src="data-collection_renderer.js"></script>
+  <script type="text/javascript" src="../static/js/blockly_main.js"></script>
 </body>
 
 </html>
