--- a/feature/target-detection.html
+++ b/feature/target-detection.html
@@ -328,7 +328,7 @@
     </div>
   </div>
 
-  <script src="../utils/language-html.js"></script>
+  <script src="../utils_protected/language-html_loader.js"></script>
   <script type="text/javascript" src="../static/js/jquery-1.11.0.min.js"></script>
   <script>try { $ = jQuery = module.exports; } catch (e) { }</script>
   <script type="text/javascript" src="../static/js/jquery-tab.js"></script>
